--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -267,6 +267,7 @@
                                     <Font name="Poor Richard" size="18.0" />
                                  </font>
                               </Label>
+                              <Button fx:id="resetBill" layoutX="225.0" layoutY="16.0" mnemonicParsing="false" onAction="#resetBill" prefHeight="34.0" prefWidth="28.0" styleClass="resetButton" stylesheets="@styles.css" />
                            </children>
                         </AnchorPane>
                      </children>
@@ -389,13 +390,13 @@
                      </padding>
                   </Label>
                   <GridPane layoutX="-1.0" layoutY="146.0" prefHeight="17.0" prefWidth="430.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
                         <Label prefHeight="17.0" prefWidth="439.0" text="Datum: 30/12/2022">
                            <padding>
