--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -51,6 +51,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.AppController">
    <children>
@@ -379,105 +380,120 @@
                </children>
             </Pane>
             <Pane fx:id="behindReceiptPane" opacity="0.26" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: black;" visible="false" />
-            <Pane fx:id="receiptPane" layoutX="760.0" layoutY="274.0" prefHeight="525.0" prefWidth="430.0" style="-fx-background-color: white; -fx-background-radius: 8;" visible="false">
+            <AnchorPane fx:id="receiptPane" prefHeight="1080.0" prefWidth="1920.0" visible="false">
                <children>
-                  <Label layoutX="154.0" layoutY="39.0" style="-fx-font-size: 22; -fx-font-weight: 700;" text="RECHNUNG" />
-                  <Label fx:id="receiptAddress" layoutX="139.0" layoutY="71.0" text="Adresse: Favoritenstraße 226" />
-                  <Label layoutX="148.0" layoutY="88.0" text="Telefon: 01 60668776600" />
-                  <Label layoutY="129.0" prefHeight="17.0" prefWidth="439.0" text="----------------------------------------------------------------------------------">
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding>
-                  </Label>
-                  <GridPane layoutX="-1.0" layoutY="146.0" prefHeight="17.0" prefWidth="430.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
+                  <FlowPane layoutX="739.0" layoutY="200.0" prefHeight="681.0" prefWidth="442.0" style="-fx-background-color: white; -fx-background-radius: 8;" AnchorPane.leftAnchor="739.0" AnchorPane.rightAnchor="739.0">
                      <children>
-                        <Label fx:id="dateInReceipt" prefHeight="17.0" prefWidth="439.0" text="Datum: 30/12/2022">
+                        <Pane prefHeight="43.0" prefWidth="442.0">
+                           <children>
+                              <Button layoutX="394.0" layoutY="13.0" mnemonicParsing="false" onAction="#closeReceipt" prefHeight="25.0" prefWidth="25.0" styleClass="closeBtn" stylesheets="@styles.css" text="Button" />
+                           </children>
+                        </Pane>
+                        <VBox alignment="TOP_CENTER" prefHeight="84.0" prefWidth="442.0">
+                           <children>
+                              <Label style="-fx-font-size: 22; -fx-font-weight: 700;" text="RECHNUNG" />
+                              <Label fx:id="receiptAddress" text="Adresse: Favoritenstraße 226" />
+                              <Label text="Telefon: 01 60668776600" />
+                              <Label fx:id="receiptBillNumber" text="Beleg Nummer: 1823761" />
+                           </children>
+                        </VBox>
+                        <Label prefHeight="17.0" prefWidth="438.0" text="----------------------------------------------------------------------------------">
                            <padding>
                               <Insets left="20.0" right="20.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="timeInReceipt" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="20:36:00" GridPane.columnIndex="1">
+                        <GridPane prefHeight="17.0" prefWidth="430.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label fx:id="dateInReceipt" prefHeight="17.0" prefWidth="439.0" text="Datum: 30/12/2022">
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="timeInReceipt" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="215.0" text="20:36:00" GridPane.columnIndex="1">
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </Label>
+                           </children>
+                        </GridPane>
+                        <Label prefHeight="17.0" prefWidth="436.0" text="----------------------------------------------------------------------------------">
                            <padding>
                               <Insets left="20.0" right="20.0" />
                            </padding>
                         </Label>
+                        <ScrollPane prefHeight="289.0" prefWidth="395.0" styleClass="resetScrollPane" stylesheets="@styles.css">
+                           <FlowPane.margin>
+                              <Insets left="20.0" />
+                           </FlowPane.margin>
+                           <content>
+                              <Text fx:id="receiptBill" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="383.13671875" />
+                           </content>
+                        </ScrollPane>
+                        <Label prefHeight="17.0" prefWidth="442.0" text="----------------------------------------------------------------------------------">
+                           <padding>
+                              <Insets left="20.0" right="20.0" />
+                           </padding>
+                        </Label>
+                        <GridPane prefHeight="77.0" prefWidth="430.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="10.0" prefWidth="209.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.0" minWidth="10.0" prefWidth="221.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label fx:id="receiptTotalText" prefHeight="17.0" prefWidth="439.0" text="Gesamtsumme:">
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="receiptTotal" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="10$" GridPane.columnIndex="1">
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="receiptPayAmountText" prefHeight="17.0" prefWidth="439.0" text="Bezahlt:" GridPane.rowIndex="1">
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="receiptPayAmount" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="25$" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="receiptRestMoneyText" prefHeight="17.0" prefWidth="439.0" text="Restgeld:" GridPane.rowIndex="2">
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="receiptRestMoney" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="15$" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                              </Label>
+                           </children>
+                        </GridPane>
+                        <Label prefHeight="17.0" prefWidth="439.0" text="----------------------------------------------------------------------------------">
+                           <padding>
+                              <Insets left="20.0" right="20.0" />
+                           </padding>
+                        </Label>
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="87.0" prefWidth="440.0" style="-fx-font-size: 22; -fx-font-weight: 700;" text="DANKE!" textAlignment="CENTER" />
                      </children>
-                  </GridPane>
-                  <Label layoutY="163.0" prefHeight="17.0" prefWidth="439.0" text="----------------------------------------------------------------------------------">
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding>
-                  </Label>
-                  <Label fx:id="receiptBill" alignment="TOP_LEFT" layoutX="4.0" layoutY="180.0" prefHeight="170.0" prefWidth="419.0" style="-fx-background-radius: 33;">
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding>
-                  </Label>
-                  <Label layoutX="-5.0" layoutY="344.0" prefHeight="17.0" prefWidth="439.0" text="----------------------------------------------------------------------------------">
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding>
-                  </Label>
-                  <GridPane layoutY="361.0" prefHeight="77.0" prefWidth="430.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="10.0" prefWidth="209.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.0" minWidth="10.0" prefWidth="221.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <Label fx:id="receiptTotalText" prefHeight="17.0" prefWidth="439.0" text="Gesamtsumme:">
-                           <padding>
-                              <Insets left="20.0" right="20.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="receiptTotal" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="10$" GridPane.columnIndex="1">
-                           <padding>
-                              <Insets left="20.0" right="20.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="receiptPayAmountText" prefHeight="17.0" prefWidth="439.0" text="Bezahlt:" GridPane.rowIndex="1">
-                           <padding>
-                              <Insets left="20.0" right="20.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="receiptPayAmount" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="25$" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <padding>
-                              <Insets left="20.0" right="20.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="receiptRestMoneyText" prefHeight="17.0" prefWidth="439.0" text="Restgeld:" GridPane.rowIndex="2">
-                           <padding>
-                              <Insets left="20.0" right="20.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="receiptRestMoney" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" text="15$" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                           <padding>
-                              <Insets left="20.0" right="20.0" />
-                           </padding>
-                        </Label>
-                     </children>
-                  </GridPane>
-                  <Label layoutY="429.0" prefHeight="17.0" prefWidth="439.0" text="----------------------------------------------------------------------------------">
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding>
-                  </Label>
-                  <Label layoutX="173.0" layoutY="460.0" style="-fx-font-size: 22; -fx-font-weight: 700;" text="DANKE!" />
-                  <Label fx:id="receiptBillNumber" layoutX="149.0" layoutY="105.0" text="Beleg Nummer: 1823761" />
-                  <Button layoutX="391.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeReceipt" prefHeight="25.0" prefWidth="25.0" styleClass="closeBtn" stylesheets="@styles.css" text="Button" />
+                  </FlowPane>
                </children>
-            </Pane>
+            </AnchorPane>
          </children>
       </Pane>
    </children>
