--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -72,12 +72,16 @@
     -fx-background-color:  #D9D9D9;
 }
 
+.resetScrollPane > .viewport {
+   -fx-background-color: transparent;
+}
+
 .resetScrollPane {
-    -fx-background-color: transparent, white;
+    -fx-background-color: white;
     -fx-background-insets: 0, 0;
 }
 
 .resetScrollPane:focused {
-    -fx-background-color: transparent, white;
+    -fx-background-color: white;
     -fx-background-insets: 0, 0;
 }
