--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -73,7 +73,7 @@
                         </AnchorPane>
                         <AnchorPane maxWidth="872.0" prefHeight="676.0" prefWidth="868.0">
                            <children>
-                              <Pane fx:id="settingsTab" layoutX="20.0" layoutY="14.0" prefHeight="871.0" prefWidth="734.0" visible="false" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="14.0">
+                              <Pane fx:id="settingsTab" layoutX="20.0" layoutY="14.0" prefHeight="871.0" prefWidth="734.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="14.0">
                                  <children>
                                     <Label prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Einstellungen">
                                        <font>
@@ -105,13 +105,14 @@
                                           </HBox>
                                        </children>
                                     </VBox>
-                                    <FlowPane columnHalignment="CENTER" hgap="10.0" layoutX="3.0" layoutY="63.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="70.0" prefWidth="655.0" vgap="20.0">
+                                    <FlowPane columnHalignment="CENTER" hgap="10.0" layoutX="3.0" layoutY="63.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="32.0" prefWidth="822.0" vgap="20.0">
                                        <children>
                                           <Button fx:id="userSettings" mnemonicParsing="false" onAction="#setupUsers" styleClass="settingsBtn" stylesheets="@styles.css" text="Nutzer bearbeiten" />
                                           <Button fx:id="productsSettings" mnemonicParsing="false" onAction="#setupProducts" styleClass="settingsBtn" stylesheets="@styles.css" text="Prdoukte bearbeiten" />
                                           <Button fx:id="tablesSettings" mnemonicParsing="false" onAction="#setupTables" styleClass="settingsBtn" stylesheets="@styles.css" text="Tische bearbeiten" />
                                           <Button fx:id="systemSettings" mnemonicParsing="false" onAction="#setupSystem" styleClass="settingsBtn" stylesheets="@styles.css" text="System Steuerung" />
                                           <Button mnemonicParsing="false" onAction="#setupBill" styleClass="settingsBtn" stylesheets="@styles.css" text="Rechnung Steuerung" />
+                                          <Button mnemonicParsing="false" onAction="#showFindReceiptPane" styleClass="settingsBtn" stylesheets="@styles.css" text="Rechnung Finden" />
                                        </children>
                                     </FlowPane>
                                     <Pane fx:id="usersSettingsPane" layoutY="105.0" prefHeight="638.0" prefWidth="828.0" visible="false">
@@ -181,9 +182,131 @@
                                           <TextField fx:id="systemNewBillNrField" layoutX="14.0" layoutY="207.0" prefHeight="25.0" prefWidth="170.0" promptText="Neue Letzte Belegnummer" />
                                        </children>
                                     </Pane>
+                                    <Pane fx:id="findReceiptPane" layoutY="115.0" prefHeight="153.0" prefWidth="828.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="281.0" style="-fx-font-size: 18;" text="Rechnung Finden:" />
+                                          <VBox layoutX="395.0" layoutY="77.0" prefHeight="56.0" prefWidth="170.0" />
+                                          <TextField fx:id="receiptNumberField" layoutX="14.0" layoutY="51.0" prefHeight="25.0" prefWidth="207.0" promptText="Rechnung Nummer" />
+                                          <Button layoutX="232.0" layoutY="51.0" mnemonicParsing="false" onAction="#startSearchReceipt" prefHeight="25.0" prefWidth="73.0" styleClass="settingsBtn" stylesheets="@styles.css" text="Suchen" />
+                                       </children>
+                                    </Pane>
+                                    <AnchorPane layoutX="14.0" layoutY="210.0" prefHeight="681.0" prefWidth="307.0">
+                                       <children>
+                                          <FlowPane fx:id="receiptPreview" prefHeight="681.0" prefWidth="356.0" style="-fx-background-color: white; -fx-background-radius: 8;">
+                                             <children>
+                                                <Pane prefHeight="43.0" prefWidth="442.0" />
+                                                <VBox alignment="TOP_CENTER" prefHeight="84.0" prefWidth="442.0">
+                                                   <children>
+                                                      <Label style="-fx-font-size: 22; -fx-font-weight: 700;" text="RECHNUNG" />
+                                                      <Text fx:id="receiptAddressFound" strokeType="OUTSIDE" strokeWidth="0.0" text="Adresse: " />
+                                                      <Text fx:id="receiptTelefonNumberFound" strokeType="OUTSIDE" strokeWidth="0.0" text="Telefon: " />
+                                                      <Text fx:id="receiptBillNumberFound" strokeType="OUTSIDE" strokeWidth="0.0" text="Beleg Nummer: " />
+                                                   </children>
+                                                </VBox>
+                                                <Label alignment="CENTER" contentDisplay="CENTER" graphicTextGap="50.0" prefHeight="17.0" prefWidth="441.0" text="----------------------------------------------------------------------------------">
+                                                   <padding>
+                                                      <Insets left="20.0" right="20.0" />
+                                                   </padding>
+                                                </Label>
+                                                <GridPane prefHeight="22.0" prefWidth="416.0">
+                                                   <columnConstraints>
+                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                   </columnConstraints>
+                                                   <rowConstraints>
+                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                   </rowConstraints>
+                                                   <children>
+                                                      <Label fx:id="dateInReceiptFound" prefHeight="17.0" prefWidth="439.0" text="Datum: ">
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </Label>
+                                                      <Label fx:id="timeInReceiptFound" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="169.0" GridPane.columnIndex="1">
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </Label>
+                                                   </children>
+                                                </GridPane>
+                                                <Label alignment="CENTER" graphicTextGap="50.0" prefHeight="17.0" prefWidth="436.0" text="----------------------------------------------------------------------------------">
+                                                   <padding>
+                                                      <Insets left="20.0" right="20.0" />
+                                                   </padding>
+                                                </Label>
+                                                <ScrollPane prefHeight="289.0" prefWidth="395.0" styleClass="resetScrollPane" stylesheets="@styles.css">
+                                                   <FlowPane.margin>
+                                                      <Insets left="20.0" />
+                                                   </FlowPane.margin>
+                                                   <content>
+                                                      <Text fx:id="receiptBillFound" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="380.13671875" />
+                                                   </content>
+                                                </ScrollPane>
+                                                <Label alignment="CENTER" graphicTextGap="50.0" prefHeight="17.0" prefWidth="442.0" text="----------------------------------------------------------------------------------">
+                                                   <padding>
+                                                      <Insets left="20.0" right="20.0" />
+                                                   </padding>
+                                                </Label>
+                                                <GridPane prefHeight="73.0" prefWidth="415.0">
+                                                   <columnConstraints>
+                                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="223.0" />
+                                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.0" minWidth="10.0" prefWidth="207.0" />
+                                                   </columnConstraints>
+                                                   <rowConstraints>
+                                                      <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                                                      <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
+                                                   </rowConstraints>
+                                                   <children>
+                                                      <Label prefHeight="17.0" prefWidth="439.0" text="Gesamtsumme inkl. Trinkgeld:">
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </Label>
+                                                      <Label fx:id="receiptTotalFound" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" GridPane.columnIndex="1">
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </Label>
+                                                      <Label prefHeight="17.0" prefWidth="439.0" text="Bezahlt:" GridPane.rowIndex="1">
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </Label>
+                                                      <Label fx:id="receiptPayAmountFound" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </Label>
+                                                      <Label prefHeight="17.0" prefWidth="439.0" text="Restgeld:" GridPane.rowIndex="2">
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </Label>
+                                                      <Label fx:id="receiptRestMoneyFound" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="439.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                                         <padding>
+                                                            <Insets left="20.0" right="20.0" />
+                                                         </padding>
+                                                      </Label>
+                                                   </children>
+                                                </GridPane>
+                                                <Label alignment="CENTER" graphicTextGap="50.0" prefHeight="17.0" prefWidth="439.0" text="----------------------------------------------------------------------------------">
+                                                   <padding>
+                                                      <Insets left="20.0" right="20.0" />
+                                                   </padding>
+                                                </Label>
+                                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="441.0">
+                                                   <children>
+                                                      <Text fx:id="receiptMessageFound" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22; -fx-font-weight: 700;" text="Danke!" />
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </FlowPane>
+                                       </children>
+                                    </AnchorPane>
                                  </children>
                               </Pane>
-                              <Pane fx:id="productsPane" prefHeight="990.0" prefWidth="868.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <Pane fx:id="productsPane" prefHeight="990.0" prefWidth="868.0" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <GridPane prefHeight="62.0" prefWidth="868.0">
                                        <columnConstraints>
